# Sessions

OpenSource-Chronicles/Python-Package/: OSS Chronicles How to build your python package.pptx
OpenSource-Chronicles/Python-Package/Calculator_package/: README.md  pyproject.toml  test.py
OpenSource-Chronicles/Python-Package/Calculator_package/calculator.egg-info/: PKG-INFO  SOURCES.txt
