[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.1"
description = "A simple calculator package"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/calculator_package"